# Multiscale-Curvature-Analysis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Formula.cpp  Makefile  PCSVsin.csv  README.md  TESTREAD.cpp  analysis.cpp  analysis.h  cmake_install.cmake  dataContainer.cpp  dataContainer.h  fileConvert.cpp  fileConvert.h  fileHandler.cpp  fileHandler.h  fileWrite.cpp  formula.cpp  formula.h  gui.cpp  gui.h  main  main.cpp  maincontroller.cpp  maincontroller.h  minmax.cpp  multithreadingtest.cpp  pathCheck  pathCheck.cpp  pathCheck.h  shell.nix  tempCodeRunnerFile.cpp  tempCodeRunnerFile.h  testDataContainer.cpp  userData.cpp  userData.h  userInput.h  userInputCLI.cpp  userInputCLI.h  (+1 more)
measurement 1/: Unnamed.qe  Unnamed.qep  Unnamed_1.txt  Unnamed_3.x3p  unnamed_2.prf
measurement 2/: Unnamed.qe  Unnamed.qep  Unnamed_3.txt  Unnamed_4.x3p  oct4_measure2.prf  unnamed_2.prf
tests/: CMakeLists.txt  test_main.cpp
verificationData_CSV/: C10001cosx+3sinx.txt  CCSVsin.csv  Ccosx+3sinx.csv  Csqrtx.txt  P10001cosx+3sinx.txt  PCSVsin.csv  Pcosx+3sinx.csv  Psqrtx.txt  acuteC.txt  acuteP.txt  circlehighresC.txt  circlehighresP.txt
